# TripPersona-AI

./: .gitignore  pyproject.toml
apps/api/: main.py
apps/web/: app.py
src/config/: settings.py
src/graph/: builder.py  nodes.py  state.py
src/llm/: loader.py
src/schemas/: request.py  response.py
src/services/: personality_service.py
src/tools/: budget.py  currency.py  places.py  weather.py
src/trippersona/: __init__.py
