[project]
name = "trippersona"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ahwanmishra1", email = "ahwan.mishra123@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.135.3",
    "langchain>=1.2.15",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.6",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "streamlit>=1.56.0",
]

[project.scripts]
trippersona = "trippersona:main"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"
